tests/test_ft_bzero.c
// #include "../libft.h"
// #include <string.h>

// int	main(void)
// {
//  	int 	ints[] = {1, 2, 600, 345, -1};
// 	char	str[] = "s\0mething";
// 	char	*rslt;

// 	printf("original: %p\t\t Your function: %p\n", bzero(ints,  sizeof(ints)), ft_bzero(ints, sizeof(ints)));
// 	printf("original: %p\t\t Your function: %p\n", bzero(str,  10), ft_bzero(str, 10));
// 	printf("original: %p\t\t Your function: %p\n", bzero(str,  3), ft_bzero(str, 3));
// 	return (0);
// }

// error: invalid use of void expression